--- a/app/src/main/res/layout/step_list.xml
+++ b/app/src/main/res/layout/step_list.xml
@@ -2,16 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:cardBackgroundColor="#FFFFFF"
-        app:cardCornerRadius="5dp"
-        app:cardUseCompatPadding="true">
-
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
@@ -29,7 +22,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
                 android:text="과정 설명"
-                android:textSize="18sp"
+                android:textSize="16sp"
                 android:textColor="@color/black"/>
         </LinearLayout>
         <ImageView
@@ -37,6 +30,6 @@
             android:layout_width="300dp"
             android:layout_height="120dp"
             android:layout_gravity="center"
+            android:scaleType="centerInside"
             />
-    </androidx.cardview.widget.CardView>
     </LinearLayout>
