--- a/app/src/main/res/layout/activity_cats_recipe.xml
+++ b/app/src/main/res/layout/activity_cats_recipe.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DogsRecipeActivity">
+    tools:context=".RecipeActivity">
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guidelineTop"
         android:layout_width="wrap_content"
