--- a/app/src/main/res/layout/activity_dog_search_result.xml
+++ b/app/src/main/res/layout/activity_dog_search_result.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DogSearchResultActivity">
+    tools:context=".SearchResultActivity">
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guidelineTop"
         android:layout_width="wrap_content"
