--- a/app/src/main/res/layout/activity_dogs_recipe.xml
+++ b/app/src/main/res/layout/activity_dogs_recipe.xml
@@ -4,34 +4,41 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DogsRecipeActivity"
+    tools:context=".RecipeActivity"
     android:orientation="vertical">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         >
-        <TextView
-            android:id="@+id/txt_type"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:text="Dog's"
-            android:textColor="@color/black"
-            android:textSize="34sp"
-            />
-        <TextView
-            android:id="@+id/txt_title"
-            android:layout_width="260dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:text="소고기와 양배추"
-            android:textColor="@color/black"
-            android:textSize="22sp"
-            />
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+            <TextView
+                android:id="@+id/txt_type"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:text="Dog's"
+                android:textColor="@color/black"
+                android:textSize="36sp"
+                />
+            <TextView
+                android:id="@+id/txt_title"
+                android:layout_width="350dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:text="소고기와 양배추"
+                android:textColor="@color/black"
+                android:textSize="22sp"
+                />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            >
             <ToggleButton
                 android:id="@+id/tog_like"
                 android:layout_width="50dp"
@@ -62,8 +69,8 @@
 
             <ImageView
                 android:id="@+id/img_main"
-                android:layout_width="350dp"
-                android:layout_height="140dp"
+                android:layout_width="300dp"
+                android:layout_height="200dp"
                 android:layout_gravity="center"
                 android:scaleType="centerInside"
                 android:layout_marginTop="8dp"
@@ -76,7 +83,7 @@
                 android:layout_marginVertical="5dp"
                 android:text="summary"
                 android:textColor="@color/black"
-                android:textSize="18sp"
+                android:textSize="16sp"
                 />
             <TextView
                 android:id="@+id/txt_tip"
@@ -85,7 +92,7 @@
                 android:layout_marginLeft="5dp"
                 android:layout_marginVertical="5dp"
                 android:text="3일 냉장보관 가능"
-                android:textColor="@color/black"
+                android:textColor="@color/purple_700"
                 android:textSize="14sp"/>
             <LinearLayout
                 android:layout_width="350dp"
@@ -122,7 +129,6 @@
                     android:textSize="14sp"
                     />
             </LinearLayout>
-
 
             <LinearLayout
                 android:layout_width="match_parent"
