--- a/app/src/main/res/menu/menu_actionbar.xml
+++ b/app/src/main/res/menu/menu_actionbar.xml
@@ -2,15 +2,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/home"
-        app:showAsAction="ifRoom"
-        android:enabled="true"
+        android:id="@+id/menu_home"
+        app:showAsAction="always"
         android:icon="@drawable/home"
         android:title="HOME"/>
     <item
-        android:id="@+id/user"
-        app:showAsAction="ifRoom"
-        android:enabled="true"
+        android:id="@+id/menu_user"
+        app:showAsAction="always"
         android:icon="@drawable/user"
         android:title="MYPAGE"/>
 </menu>
