--- a/app/src/main/res/layout/fragment_delete.xml
+++ b/app/src/main/res/layout/fragment_delete.xml
@@ -33,36 +33,17 @@
         android:layout_width="280dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="100dp"
         android:text="Do you really want to delete your account?"
         android:textSize="30sp" />
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="70dp">
-        <Button
+    <Button
             android:id="@+id/btn_yes"
             android:layout_width="140dp"
-            android:layout_height="110dp"
-            android:layout_marginRight="20dp"
+            android:layout_height="100dp"
+            android:layout_gravity="center"
+        android:layout_marginTop="100dp"
             android:backgroundTint="#0B0A0A"
-            android:text="Yes   (Delete)"
+            android:text="Delete"
             android:textSize="20sp"
-            app:iconTint="#000000"
-            />
-
-        <Button
-            android:id="@+id/btn_no"
-            android:layout_width="140dp"
-            android:layout_height="110dp"
-            android:layout_marginLeft="20dp"
-            android:backgroundTint="#000000"
-            android:text="No  (Return)"
-            android:textSize="20sp"
-            app:iconTint="#F8000000"
-            />
-    </LinearLayout>
-
+            app:iconTint="#000000" />
 </LinearLayout>
