--- a/app/src/main/res/layout/fragment_refrig.xml
+++ b/app/src/main/res/layout/fragment_refrig.xml
@@ -22,7 +22,7 @@
             android:id="@+id/name_txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="user_name"
+            android:text=""
             android:textColor="@color/purple_500"
             android:textSize="28sp"/>
     </LinearLayout>
